--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Go
+      - name: Initialize Go module
+        run: |
+          echo "Current directory: $(pwd)"
+          echo "Go version: $(go version)"
+          echo "Go module path: $(go list -m)"
+          echo "Go module root: $(go env GOMOD)"
+          ls -la
+          go mod tidy
+
         uses: actions/setup-go@v4
         with:
           go-version: ${{ env.GO_VERSION }}
@@ -56,6 +65,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Go
+      - name: Initialize Go module
+        run: |
+          echo "Current directory: $(pwd)"
+          echo "Go version: $(go version)"
+          echo "Go module path: $(go list -m)"
+          echo "Go module root: $(go env GOMOD)"
+          ls -la
+          go mod tidy
+
         uses: actions/setup-go@v4
         with:
           go-version: ${{ env.GO_VERSION }}
