Fix GitHub Actions workflow: manually insert Initialize Go module step in test job

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,15 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: ${{ env.GO_VERSION }}
+      - name: Initialize Go module
+        run: |
+          echo "Current directory: $(pwd)"
+          echo "Go version: $(go version)"
+          echo "Go module path: $(go list -m)"
+          echo "Go module root: $(go env GOMOD)"
+          ls -la
+          go mod tidy
+
 
       - name: Install Terraform
         run: |
