--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,9 +1,9 @@
-# Copyright (c) HashiCorp, Inc.
-version: 2
+# Copyright (c) 2025 NRP-Nautilus
 # SPDX-License-Identifier: MPL-2.0
 
 # Visit https://goreleaser.com for documentation on how to customize this
 # behavior.
+version: 2
 before:
   hooks:
     # this is just an example and not a requirement for provider building/publishing
@@ -20,14 +20,10 @@ builds:
   ldflags:
     - '-s -w -X main.version={{.Version}} -X main.commit={{.Commit}}'
   goos:
-    - freebsd
-    - windows
     - linux
     - darwin
   goarch:
     - amd64
-    - '386'
-    - arm
     - arm64
   ignore:
     - goos: darwin
@@ -42,18 +38,7 @@ checksum:
       name_template: '{{ .ProjectName }}_{{ .Version }}_manifest.json'
   name_template: '{{ .ProjectName }}_{{ .Version }}_SHA256SUMS'
   algorithm: sha256
-signs:
-  - artifacts: checksum
-    args:
-      # if you are using this in a GitHub action or some other automated pipeline, you 
-      # need to pass the batch flag to indicate its not interactive.
-      - "--batch"
-      - "--local-user"
-      - "{{ .Env.GPG_FINGERPRINT }}" # set this environment variable for your signing key
-      - "--output"
-      - "${signature}"
-      - "--detach-sign"
-      - "${artifact}"
+# GPG signing removed for community provider
 release:
   extra_files:
     - glob: 'terraform-registry-manifest.json'
