Re-enable GPG signing with simplified batch mode configuration

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,11 +42,10 @@ jobs:
         env:
           GPG_TTY: /dev/console
       -
-        name: Disable GPG Agent
+        name: Configure GPG for Batch Mode
         run: |
-          gpgconf --kill gpg-agent
-          echo "use-agent" >> ~/.gnupg/gpg.conf
-          echo "pinentry-mode loopback" >> ~/.gnupg/gpg.conf
+          echo "batch-mode" >> ~/.gnupg/gpg.conf
+          echo "no-tty" >> ~/.gnupg/gpg.conf
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@f82d6c1c344bcacabba2c841718984797f664a6b # v4.2.0
