--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,16 +42,13 @@ jobs:
         env:
           GPG_TTY: /dev/console
       -
-        name: Configure GPG for Batch Mode
-        run: |
-          echo "no-tty" > ~/.gnupg/gpg.conf
-          echo "batch" >> ~/.gnupg/gpg.conf
+
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@f82d6c1c344bcacabba2c841718984797f664a6b # v4.2.0
         with:
           version: latest
-          args: release --clean
+          args: release --rm-dist
         env:
           GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
           # GitHub sets this automatically
