--- a/terraform-registry-manifest.json
+++ b/terraform-registry-manifest.json
@@ -2,5 +2,36 @@
     "version": 1,
     "metadata": {
         "protocol_versions": ["5.0"]
-    }
+    },
+    "providers": [
+        {
+            "name": "kubevirt",
+            "namespace": "terraform-dev",
+            "type": "kubevirt",
+            "versions": [
+                {
+                    "version": "0.2.25",
+                    "protocols": ["5.0"],
+                    "platforms": [
+                        {
+                            "os": "linux",
+                            "arch": "amd64"
+                        },
+                        {
+                            "os": "linux",
+                            "arch": "arm64"
+                        },
+                        {
+                            "os": "darwin",
+                            "arch": "amd64"
+                        },
+                        {
+                            "os": "darwin",
+                            "arch": "arm64"
+                        }
+                    ]
+                }
+            ]
+        }
+    ]
 }
