--- a/terraform-registry-manifest.json
+++ b/terraform-registry-manifest.json
@@ -1,7 +1,9 @@
 {
     "version": 1,
     "metadata": {
-        "protocol_versions": ["5.0"]
+        "protocol_versions": [
+            "5.0"
+        ]
     },
     "providers": [
         {
@@ -11,7 +13,33 @@
             "versions": [
                 {
                     "version": "0.2.25",
-                    "protocols": ["5.0"],
+                    "protocols": [
+                        "5.0"
+                    ],
+                    "platforms": [
+                        {
+                            "os": "linux",
+                            "arch": "amd64"
+                        },
+                        {
+                            "os": "linux",
+                            "arch": "arm64"
+                        },
+                        {
+                            "os": "darwin",
+                            "arch": "amd64"
+                        },
+                        {
+                            "os": "darwin",
+                            "arch": "arm64"
+                        }
+                    ]
+                },
+                {
+                    "version": "0.2.26",
+                    "protocols": [
+                        "5.0"
+                    ],
                     "platforms": [
                         {
                             "os": "linux",
