fix: Correct namespace from terraform-dev to nrp-nautilus for HCP compatibility

--- a/terraform-registry-manifest.json
+++ b/terraform-registry-manifest.json
@@ -8,7 +8,7 @@
     "providers": [
         {
             "name": "kubevirt",
-            "namespace": "terraform-dev",
+            "namespace": "nrp-nautilus",
             "type": "kubevirt",
             "versions": [
                 {
