--- a/terraform-registry-manifest.json
+++ b/terraform-registry-manifest.json
@@ -226,6 +226,30 @@
                             "arch": "arm64"
                         }
                     ]
+                },
+                {
+                    "version": "0.2.34",
+                    "protocols": [
+                        "5.0"
+                    ],
+                    "platforms": [
+                        {
+                            "os": "linux",
+                            "arch": "amd64"
+                        },
+                        {
+                            "os": "linux",
+                            "arch": "arm64"
+                        },
+                        {
+                            "os": "darwin",
+                            "arch": "amd64"
+                        },
+                        {
+                            "os": "darwin",
+                            "arch": "arm64"
+                        }
+                    ]
                 }
             ]
         }
