--- a/bin/terraform-registry-manifest.json
+++ b/bin/terraform-registry-manifest.json
@@ -250,6 +250,54 @@
                             "arch": "arm64"
                         }
                     ]
+                },
+                {
+                    "version": "0.2.35",
+                    "protocols": [
+                        "5.0"
+                    ],
+                    "platforms": [
+                        {
+                            "os": "linux",
+                            "arch": "amd64"
+                        },
+                        {
+                            "os": "linux",
+                            "arch": "arm64"
+                        },
+                        {
+                            "os": "darwin",
+                            "arch": "amd64"
+                        },
+                        {
+                            "os": "darwin",
+                            "arch": "arm64"
+                        }
+                    ]
+,
+                {
+                    "version": "0.2.36",
+                    "protocols": [
+                        "5.0"
+                    ],
+                    "platforms": [
+                        {
+                            "os": "linux",
+                            "arch": "amd64"
+                        },
+                        {
+                            "os": "linux",
+                            "arch": "arm64"
+                        },
+                        {
+                            "os": "darwin",
+                            "arch": "amd64"
+                        },
+                        {
+                            "os": "darwin",
+                            "arch": "arm64"
+                        }
+                    ]
                 }
             ]
         }
